tests/invalid/type/module_import_path_no_root_proto.pts
import "./modules/NoProto.pts";

function main() : void {
}
